--- a/appliCliente/index.html
+++ b/appliCliente/index.html
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-                        <a class="nav-link" href ui-sref="reseignement" ui-sref-active="active">Renseignements</a>
+                        <a class="nav-link" href ui-sref="renseignement" ui-sref-active="active">Renseignements</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href ui-sref="evenements" ui-sref-active="active">Événements</a>
