--- a/appliCliente/index.html
+++ b/appliCliente/index.html
@@ -7,6 +7,16 @@
 
         <!-- Ajout des librairies CSS tierces -->
         <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+		<!-- Ajout des librairies JS tierces -->
+        <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
+        <script src="../bower_components/popper.js/dist/umd/popper.min.js" type="text/javascript"></script>
+        <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="/bower_components/angular/angular.min.js" type="text/javascript"></script>
+        <script src="/bower_components/angular-resource/angular-resource.min.js" type="text/javascript"></script>
+        <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
+        <!-- Ajout des scripts de notre application Angular, EN COMMENCANT LE SCRIPT PRINCIPAL DE NOTRE APPLI (celui qui contient la configuration du module et ses dépendances) -->
+        <script src="appliAngular/app.js" type="text/javascript"></script>
+		<script src="appliAngular/evenementAngular.js" type="text/javascript"></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -30,23 +40,8 @@
         </nav>
         <div class="container">
             <!--Ici sera injecté le contenu d'une vue (attribut ui-view) -->
-            <div ui-view></div>
+            <div ui-view=""></div>
         </div>
-
-        <!-- Ajout des librairies JS tierces -->
-        <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
-        <script src="../bower_components/popper.js/dist/umd/popper.min.js" type="text/javascript"></script>
-        <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="/bower_components/angular/angular.min.js" type="text/javascript"></script>
-        <script src="/bower_components/angular-resource/angular-resource.min.js" type="text/javascript"></script>
-        <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
-
-        <!-- Ajout des scripts de notre application Angular, EN COMMENCANT LE SCRIPT PRINCIPAL DE NOTRE APPLI (celui qui contient la configuration du module et ses dépendances) -->
-        <script src="appliAngular/app.js" type="text/javascript"></script>
-        <!--<script src="appliAngular/controllers/creationController.js" type="text/javascript"></script>
-        <script src="appliAngular/controllers/operationController.js" type="text/javascript"></script>
-        <script src="appliAngular/controllers/positionController.js" type="text/javascript"></script>
-        <script src="appliAngular/services/compteService.js" type="text/javascript"></script> -->
 
     </body>
 </html>
