--- a/appliCliente/vues/evenements.html
+++ b/appliCliente/vues/evenements.html
@@ -1,49 +1,50 @@
-<div class="row">
-    <div class="col">
-        <h1 class='text-center text-success'>Événements</h1>
-    </div>
-</div>
-<div class="row justify-content-center">
-	<div class="col-11">
-		<table class="table ">
-			<thead class="thead-dark">
+
+	<div class="row">
+		<div class="col">
+			<h1 class='text-center text-success'>Événements</h1>
+		</div>
+	</div>
+	<div class="row justify-content-center" ng-controller="CtrlEvenement">
+		<div class="col-11">
+			<table class="table ">
+				<thead class="thead-dark">
+					<tr>
+						<th>Evènement</th>
+						<th>Date</th>
+						<th>Lieu</th>
+						<th>Participants</th>
+						<th>Actions</th>
+					</tr>
+				</thead>
+				<tbody>
 				<tr>
-					<th>Evènement</th>
-					<th>Date</th>
-					<th>Lieu</th>
-					<th>Participants</th>
-					<th>Actions</th>
+					<td>AL3C</td>
+					<td>19/06/2018</td>
+					<td>Paul Sabatier - U3</td>
+					<td>65/250</td>
+					<td>
+						<button class="btn btn-light col-3" ng-click="consulter()"><img src="icons/icons8-eye-20.png"/></button>
+						<button class="btn btn-light col-3"><img src="icons/icons8-plus-math-20.png"/></button>
+						<button class="btn btn-light col-3"><img src="icons/icons8-delete-20.png"/></button>
+					</td>
 				</tr>
-			</thead>
-			<tbody>
-			<tr>
-				<td>AL3C</td>
-				<td>19/06/2018</td>
-				<td>Paul Sabatier - U3</td>
-				<td>65/250</td>
-				<td>
-					<button class="btn btn-primary col-3">+</button>
-					<button class="btn btn-success col-3">-></button>
-					<button class="btn btn-danger col-3">-</button>
-				</td>
-			</tr>
-			<tr>
-				<td>CDH</td>
-				<td>15/03/2018</td>
-				<td>Capitole - U3</td>
-				<td>89/250</td>
-				<td>
-					<button class="btn btn-primary col-3">+</button>
-					<button class="btn btn-success col-3">-></button>
-					<button class="btn btn-danger col-3">-</button>
-				</td>
-			</tr>
-			</tbody>
-		</table>
+				<tr>
+					<td>CDH</td>
+					<td>15/03/2018</td>
+					<td>Capitole - U3</td>
+					<td>89/250</td>
+					<td>
+						<button class="btn btn-light col-3"><img src="icons/icons8-eye-20.png"/></button>
+						<button class="btn btn-light col-3"><img src="icons/icons8-plus-math-20.png"/></button>
+						<button class="btn btn-light col-3"><img src="icons/icons8-delete-20.png"/></button>
+					</td>
+				</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
-</div>
-<div class="row justify-content-center">
-	<div>
-		<a  href ui-sref="evenementsCrea" ui-sref-active="active"><input type="button" class="btn btn-info col-12" value="Ajouter un évènement"></a>
+	<div class="row justify-content-center">
+		<div>
+			<a  href ui-sref="evenementsCrea" ui-sref-active="active"><input type="button" class="btn btn-info col-12" value="Ajouter un évènement"></a>
+		</div>
 	</div>
-</div>
