--- a/appliCliente/index.html
+++ b/appliCliente/index.html
@@ -6,7 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Ajout des librairies CSS tierces -->
+        <link href="/css.css" rel="stylesheet" type="text/css"/>
         <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/sandstone/bootstrap.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Ajout des librairies JS tierces -->
         <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
         <script src="../bower_components/popper.js/dist/umd/popper.min.js" type="text/javascript"></script>
@@ -16,10 +19,20 @@
         <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
         <!-- Ajout des scripts de notre application Angular, EN COMMENCANT LE SCRIPT PRINCIPAL DE NOTRE APPLI (celui qui contient la configuration du module et ses dépendances) -->
         <script src="appliAngular/app.js" type="text/javascript"></script>
-		<script src="appliAngular/evenementAngular.js" type="text/javascript"></script>
+		<script src="appliAngular/controllers/evenementAngular.js" type="text/javascript"></script>
+    	<script src="appliAngular/controllers/utilisateurAngular.js" type="text/javascript"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+<!--
+            <div class="modal-footer">
+                <div style="padding:10px"></div>
+            </div>
+-->
+        </div>
+        </div>
+    </div>
+        <nav class="navbar navbar-expand-lg navbar-dark  bg-dark ">
             <a class="navbar-brand" href ui-sref="creation">MiageIn</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -32,10 +45,39 @@
                     <li class="nav-item">
                         <a class="nav-link" href ui-sref="evenements" ui-sref-active="active">Événements</a>
                     </li>
+                    <li class="nav-item">
+                                  <a class="nav-link" href ui-sref="evenementsCrea" ui-sref-active="active">New Event</a>
+                              </li>
 					<li class="nav-item">
                         <a class="nav-link" href ui-sref="statistiques" ui-sref-active="active">Statistiques</a>
                     </li>
+
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> </span></a>
+			<ul id="login-dp" class="dropdown-menu">
+				<li>
+					 <div class="row">
+							<div class="col-md-12">
+								 <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+										<div class="form-group">
+											 <label class="sr-only" for="exampleInputEmail2">Email address</label>
+											 <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+										</div>
+										<div class="form-group">
+											 <label class="sr-only" for="exampleInputPassword2">Password</label>
+											 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+                                             <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+										</div>
+										<div class="form-group">
+											 <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+										</div>
+								 </form>
+							</div>
+					 </div>
+				</li>
+                 </ul>
             </div>
         </nav>
         <div class="container">
