--- a/appliCliente/vues/evenementsCrea.html
+++ b/appliCliente/vues/evenementsCrea.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col">
-        <h1 class='text-center text-success'>Création d'évenement</h1>
+        <h1 class='text-center text-info'>Création d'évenement</h1>
     </div>
 </div>
 
