--- a/appliCliente/vues/renseignement.html
+++ b/appliCliente/vues/renseignement.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col">
-        <h1 class='text-center text-success'> Vos Renseignements</h1>
+        <h1 class='text-center text-info'> Vos Renseignements</h1>
     </div>
 </div>
 
@@ -24,7 +24,7 @@
 					<div class="col-sm-12 col-md-6">
 							<div class="form-group">
 								<label for="type"  >Type</label>
-								<select name="type" class="form-control" id="type" placeholder="Saisissez votre type" required tabindex="3" ng-model='utilisateur.type'>
+								<select name="type" class="form-control custom-select id="type" placeholder="Saisissez votre type" required tabindex="3" ng-model='utilisateur.type'>
 									<option value="Etudiant">Etudiant</option>
 									<option value="Prof">Prof</option>
 							  </select>
