--- a/appliCliente/vues/statistiques.html
+++ b/appliCliente/vues/statistiques.html
@@ -1,10 +1,19 @@
 <div class="row">
     <div class="col">
-        <h1 class='text-center text-success'>Statistiques</h1>
+        <h1 class='text-center text-info'>Statistiques</h1>
     </div>
 </div>
 <div class="row justify-content-center">
     <div class="col-12 col-sm-10 col-md-6 col-lg-4">
-        Statistiques
+      
+
+        <div class="card border-info col-12 " >
+          <div class="card-header">Statistiques générales</div>
+          <div class="card-body">
+            <p class="card-text">Nb event</p>
+            <p class="card-text">Nb moyen</p>
+          </div>
+        </div>
+
     </div>
 </div>
