--- a/appliCliente/vues/renseignement.html
+++ b/appliCliente/vues/renseignement.html
@@ -25,6 +25,7 @@
 							<div class="form-group">
 								<label for="type"  >Type</label>
 								<select name="type" class="form-control custom-select id="type" placeholder="Saisissez votre type" required tabindex="3" ng-model='utilisateur.type'>
+								<select name="type" class="form-control custom-select" id="type" placeholder="Saisissez votre type" required tabindex="3" ng-model='utilisateur.type'>
 									<option value="Etudiant">Etudiant</option>
 									<option value="Prof">Prof</option>
 							  </select>
